<resources>
    <string name="app_name">alarm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_newAlarm">新規アラーム</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_alarm_name">アラーム名</string>
    <string name="form_alarm_name">デフォルト1</string>
    <string name="label_alarm_date">日にち</string>
    <string name="form_alarm_date">今の日にち</string>
    <string name="label_alarm_time">時間</string>
    <string name="form_alarm_time">今の時間</string>
    <string name="form_alarm_submit">設定</string>
    <string name="form_alarm_enabled">有効設定</string>
    <string name="form_alarm_delete">削除</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="button_alert_close">閉じる</string>

    <string name="toast_update_on">アラームを設定しました</string>
    <string name="toast_update_off">アラームを解除しました</string>
    <string name="toast_delete">削除しました</string>
    <string name="toast_check_blank_name">アラーム名がありません</string>
    <string name="toast_check_date">現在より未来の値を入力してください</string>

</resources>
